# map-charting-student-math-misunderstandings

./: .gitignore  README.md  do_py.sh  do_py_multi.sh  do_py_series.sh  pyproject.toml  pyproject_250922.toml  pyproject_for_llm_compressor.toml  pyproject_llmcom.toml  pyproject_org.toml  pyprojectuv_2510111750_before_32B.toml  quantize_and_upload.sh  requirements.txt
baseline_template/table/: cb_classification_polars.ipynb  xgb_classification_polars.ipynb
config/: accelerate_config_zero3.yaml
exp/exp001/: evaluate.py  train.py
exp/exp001_cls/: evaluate.py  train.py
exp/exp001_gen/: evaluate.py  train.py
exp/exp002/: evaluate.py  train.py
exp/exp003/: train.py
exp/exp004/: evaluate.py  train.py
exp/exp005/: evaluate.py  train.py
exp/exp006/: evaluate.py  train.py
exp/exp007/: train.py
exp/exp008/: quantize_autoround_3ep_8bit.py  quantize_awq.py  quantize_awq_2ep_4bit.py  quantize_awq_3ep_4bit.py  quantize_awq_3ep_8bit.py  train.py
exp/exp009/: do_py.sh  train.py
exp/exp010/: do_py.sh  train.py
exp/exp011/: evaluate.py  train.py  train_after_fix.py
exp/exp012/: do_py.sh  evaluate.py  gen_data.py  train.py  train_map3.py  train_old.py
exp/exp013/: change_icon_to_label.py  do_py.sh  do_py_for_gen_data.sh  evaluate.py  gen_data.py  train.py
exp/exp014/: do_py.sh  train.py
exp/exp015/: do_py.sh  train.py
exp/exp016/: do_py.sh  evaluate.py  train.py
exp/exp017/: do_py.sh  train.py
exp/exp018/: change_icon_to_label.py  do_py.sh  evaluate.py  train.py
exp/exp019/: do_py.sh  train.py
exp/exp020/: do_py.sh  train.py
shell/: download_competition_data.sh  git_first_push.sh  install_aws.sh  multiple_run.sh
(+87 files in other folders)
