[project]
name = "map-charting-student-math-misunderstandings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "trl>=0.22.2",
    "wandb>=0.21.3",
]

[project.optional-dependencies]
flash-attn = ["flash-attn==2.8.3"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]