[project]
name = "map-charting-student-math-misunderstandings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "isort>=6.0.1",
    "kaggle>=1.7.4.5",
    "pandas>=2.3.2",
    "ruff>=0.12.12",
    "scikit-learn>=1.7.1",
    "torch==2.7.0",
    "transformers==4.52.4",
    "vllm==0.9.2",
    "wandb>=0.21.3",
]

[project.optional-dependencies]
flash-attn = ["flash-attn==2.8.3"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
